--- a/pub.html
+++ b/pub.html
@@ -67,7 +67,7 @@
         <h3>
                 The Wakarchuk Lab for GlycoScience
         </h3>
-        <h1>publications</h1>
+        <h1>Publications</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
