--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
         <h3>
             The Wakarchuk Lab for GlycoScience
         </h3>
-        <h1>glycobiology lab</h1>
+        <h1>Glycobiology Lab</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
@@ -173,7 +173,7 @@
 
                     <div class="col-md-12">
                         <div class="header">
-                            <h1 style='margin-bottom:1em;' id='crew'>crew</h1>
+                            <h1 style='margin-bottom:1em;' id='crew'>Crew</h1>
                         </div>
 
                         <div class="container" id='content-main'>
@@ -183,7 +183,7 @@
 
 
 
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-2'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-1'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/warren 1.png" alt="">
                                     <h3 class='header team-name'>
 
@@ -199,7 +199,7 @@
                                         directing
                                         the team he can found cooking or playing guitar. </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-3'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-2'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg" alt="">
                                     <h3 class='header team-name'>
                                         Nakita Buenbrazo MSc
@@ -225,7 +225,7 @@
                                         as well the PST project where we are improving polysialyltransferases for tissue
                                         engineering and therapeutic protein modification</p>
                                 </div> -->
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-5'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-3'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/AJ 1.jpg" alt="">
                                     <h3 class='header team-name'>
                                         Aju-Sue Francis MSc
@@ -241,7 +241,7 @@
                                         She
                                         is helping to develop new expression vectors for this work.</p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-6'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-4'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/nicole.jpg" alt="">
                                     <h3 class='header team-name'>
                                         Nicole Thompson BSc
@@ -268,7 +268,7 @@
                                         the glycosyltransferases
                                     </p>
                                 </div> -->
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-7'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-5'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Hirak 1.png" alt="">
                                     <h3 class='header team-name'>
                                         Hirak Saxena MSc
@@ -286,7 +286,7 @@
                                         in vitro remodelling of therapeutic protein glycans.
                                     </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-8'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-6'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Tasnim 1.jpg" alt="">
                                     <h3 class='header team-name'>
                                         Tasnim Abukar BSc
@@ -300,7 +300,7 @@
                                         protein discovery and characterization.
                                     </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-9'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-7'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Sadia 1.png" alt="">
                                     <h3 class='header team-name'>
                                         Sadia Rahmani BSc
@@ -330,12 +330,12 @@
 
                     <div class="col-lg-12 col-md-12 col-xs-12">
                         <div class="header">
-                            <h1 id='alumni' style='margin-bottom:1em;'>alumni</h1>
+                            <h1 id='alumni' style='margin-bottom:1em;'>Alumni</h1>
                         </div>
                         <div class="container" style='color:black' id='writing'>
                             <div class="row">
                                 <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Laura Kell MSc (MSc Candidate 2018) </p>
+                                    <p class='team-p'> Laura Kell MSc (MSc 2016 to 2018) </p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
                                     <p class='team-p'> Biprajit Sanyal BSc (MSc Candidate 2018) </p>
