--- a/research.html
+++ b/research.html
@@ -171,7 +171,7 @@
 
                     <p>
 
-                        <h1 class='header' style='font-size:2em;margin-top:1em;color:#ea4235;text-align:center; letter-spacing:0.03em'>Polysialyation of proteins to improve serum half-life.</h1>
+                        <h1 class='header' style='font-size:2em;margin-top:1em;color:#ea4235;text-align:center; letter-spacing:0.03em'>Polysialyation of Proteins to Improve Serum Half-Life.</h1>
                         <div class="container">
                             <div class="row">
 
@@ -209,7 +209,7 @@
                     </p>
                     <p>
 
-                        <h1 class='header' style='font-size:2em;margin-top:1em;color:#ea4235;text-align:center; letter-spacing:0.03em'>The first GT-52 sialyltransferase structure. </h1>
+                        <h1 class='header' style='font-size:2em;margin-top:1em;color:#ea4235;text-align:center; letter-spacing:0.03em'>The First GT-52 Sialyltransferase Structure. </h1>
                         <div class="container">
                             <div class="row">
 
@@ -241,7 +241,7 @@
                         <strong>what does this protein modification do for these bacteria</strong>? We are applying
                         <strong>synthetic biology</strong> and
                         <strong>glycoproteomics</strong> to address this complex problem in the hope we can uncover
-                        <strnog>fundamental knowledge of this glycosylation process.</strnog>
+                        <strong>fundamental knowledge of this glycosylation process.</strong>
                     </p>
                     <div class="container">
                         <div class="row">
