--- a/research.html
+++ b/research.html
@@ -247,7 +247,7 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-12" style='margin-top:0rem; text-align:left'>
                                 <div class="header">
-                                    <h3>Wakarchuk Lab Funding</h3>
+                                    <h3>Wakarchuk Lab Funding</h3><br>
                                 </div>
                                 <p style='font-size:1.7rem; '>
                                     <p style='font-size:1.7rem;'>
@@ -268,7 +268,7 @@
                             </div>
                             <div class="col-md-6 col-sm-12" style='margin-top:0rem; text-align:center'>
                                 <div class="header">
-                                    <h3>Useful GlycoScience links </h3>
+                                    <h3>Useful GlycoScience Links </h3><br>
                                 </div>
                                 <p style='font-size:1.7rem;'>
                                     -
