Changed Logo to the Funding Page and added preloader

--- a/team.html
+++ b/team.html
@@ -335,10 +335,13 @@
                         <div class="container" style='color:black' id='writing'>
                             <div class="row">
                                 <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Laura Kell MSc (MSc 2016 to 2018) </p>
+                                    <p class='team-p'> Lynn D'Souza (Research assistant 2017-2018) </p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Biprajit Sanyal BSc (MSc Candidate 2018) </p>
+                                    <p class='team-p'> Laura Kell MSc (MSc 2016-2018) </p>
+                                </div>
+                                <div class="col-md-3 col-xs-3">
+                                    <p class='team-p'> Biprajit Sanyal BSc (MSc Candidate 2015-2018) </p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
                                     <p class='team-p'> Dr. Bettina Janesch (Postdoctoral Fellow 2016-2018)</p>
