fixed position of preloader

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img style= "width: 100px;
             height: 100px;
             position: fixed;
-            top: 50%;
+            top: 70%;
             left: 50%;
             transform: translate(-50%, -50%);"src='images/Preloader/loading.gif'>
     </div>
@@ -151,7 +151,7 @@
             </div>
         </div>
     </nav>
-    <section id='main' style='margin-top:-5em'>
+    <section id='main' style='margin-top:-5em; display:none'>
         <div class="container" style='margin-bottom:10em'>
             <div class="row">
 
