--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@
 
 
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-1'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Warren 1.jpg" alt="">
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Warren 1.JPG" alt="">
                                     <h3 class='header team-name'>
 
                                         Warren W. Wakarchuk
