added span to h1

--- a/team.html
+++ b/team.html
@@ -405,7 +405,7 @@
                             <h1 id='alumni' style='margin-bottom:1em;'>Lab Events</h1>
                         </div>
                         <div class="img-text">
-                            <h1>Click To View</h1>
+                            <h1> <span> Click To View </span></h1>
                         </div>
                         <a data-fancybox="gallery" href="images/Events/Wakarchuk lab party 2018.jpg" data-caption="Wakarchuk lab party 2018">
                             <img src="images/Events/Wakarchuk lab party 2018.jpg">
