--- a/pub.html
+++ b/pub.html
@@ -159,7 +159,21 @@
 
         <div class="container" style='margin-bottom:10em'>
             <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
 
+                        <div class="col-md-12">
+                            <h2 class='research-header'>
+                                <a style='color:black' href="https://www.sciencedirect.com/science/article/pii/S2451945618303775" target='_blank'> A Bacterial Expression Platform for Production of Therapeutic Proteins Containing Human-like O-Linked Glycans </a>
+
+                            </h2>
+                            <p>November 29, 2018</p>
+                            <figure class='abstract'>We have developed an Escherichia coli strain for the in vivo production of O-glycosylated proteins. This was achieved using a dual plasmid approach: one encoding a therapeutic protein target, and a second encoding the enzymatic machinery required for O-glycosylation. The latter plasmid encodes human polypeptide N-acetylgalactosaminyl transferase as well as a β1,3-galactosyl transferase and UDP-Glc(NAc)-4-epimerase, both from Campylobacter jejuni, and a disulfide bond isomerase of bacterial or human origin. The effectiveness of this two-plasmid synthetic operon system has been tested on three proteins with therapeutic potential: the native and an engineered version of the naturally O-glycosylated human interferon α-2b, as well as human growth hormone with one engineered site of glycosylation. Having established proof of principle for the addition of the core-1 glycan onto proteins, we are now developing this system as a platform for producing and modifying human protein therapeutics with more complex O-glycan structures in E. coli.
+
+                            </figure>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-6">
                     <div class="row">
 
@@ -186,31 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
 
-                        <div class="col-md-12">
-                            <h2 class='research-header'>
-                                <a style='color:black' href="https://www.nature.com/articles/s41598-017-05627-z" target='_blank'> X-ray crystallographic structure of a bacterial polysialyltransferase provides insight into
-                                    the biosynthesis of capsular polysialic acid </a>
-
-                            </h2>
-                            <p>19 July 2017</p>
-                            <figure class='abstract'>Polysialic acid (polySia) is a homopolymeric saccharide that is associated with some neuroinvasive
-                                pathogens and is found on selective cell types in their eukaryotic host. The presence of
-                                a polySia capsule on these bacterial pathogens helps with resistance to phagocytosis, cationic
-                                microbial peptides and bactericidal antibody production. The biosynthesis of bacterial polySia
-                                is catalysed by a single polysialyltransferase (PST) transferring sialic acid from a nucleotide-activated
-                                donor to a lipid-linked acceptor oligosaccharide. Here we present the X-ray structure of
-                                the bacterial PST from Mannheimia haemolytica serotype A2, thereby defining the architecture
-                                of this class of enzymes representing the GT38 family. The structure reveals a prominent
-                                electropositive groove between the two Rossmann-like domains forming the GT-B fold that is
-                                suitable for binding …
-
-                            </figure>
-                        </div>
-                    </div>
-                </div>
 
 
             </div>
