Added Alberta page. Moved few member from ryerson to Alberta

--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 
 <body>
 
-    <div class='top-brand' style='z-index:99;'>
+    <div class='top-brand top-red' style='z-index:99;'>
         <h4> Wakarchuk Lab</h4>
 
     </div>
@@ -75,7 +75,7 @@
         <h3>
             The Wakarchuk Lab for GlycoScience
         </h3>
-        <h1>Why Glycobiology?</h1>
+        <h1 class="red">Why Glycobiology?</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
@@ -120,7 +120,7 @@
                                 <li class="nav-item">
                                     <a class="links" href="team.html">Team</a>
                                 </li>
-
+                              
                             </ul>
                         </div>
                         <div class="col-md-4 col-xs-12">
@@ -190,7 +190,7 @@
 
                     </p>
                     <div class="header">
-                        <h1 style='margin-top:1em;color:#ea4235'>Enzymes for Glycobiology?</h1>
+                        <h1 style='margin-top:1em;' class="red">Enzymes for Glycobiology?</h1>
                     </div>
 
                     <p>
@@ -229,7 +229,7 @@
 
                     </p>
                     <div class="header">
-                        <h1 style='margin-top:1em;color:#ea4235'>Synthetic Biology and its Application for Glycobiology?</h1>
+                        <h1 style='margin-top:1em;' class="red">Synthetic Biology and its Application for Glycobiology?</h1>
                     </div>
 
                     <p style='font-size:1.7rem'>
