--- a/pub.html
+++ b/pub.html
@@ -22,7 +22,7 @@
 
 
 
-    <div class='top-brand' style='z-index:99;'>
+    <div class='top-brand top-red' style='z-index:99;'>
         <h4> Wakarchuk Lab</h4>
 
     </div>
@@ -67,7 +67,7 @@
         <h3>
                 The Wakarchuk Lab for GlycoScience
         </h3>
-        <h1>Publications</h1>
+        <h1 class="red">Publications</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
@@ -114,7 +114,8 @@
                                 <li class="nav-item">
                                     <a class="links" href="team.html">Team</a>
                                 </li>
-
+                              
+                                
                             </ul>
                         </div>
                         <div class="col-md-4 col-xs-12">
